# context-py

./: .gitignore  DEVELOPMENT.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: log_conversation.py  log_conversation_async.py  log_testset.py
getcontext/: __init__.py  token.py
getcontext/tracing/: __init__.py  _helpers.py  _tools.py  exceptions.py  trace.py
tests/: test__tools.py  test_trace.py
