[tool.poetry]
name = "context-python"
version = "0.1.0"
description = "Python SDK for the Context API"
authors = ["Alex Gamble <alex@woolly.ai>"]
readme = "README.md"
packages = [{include = "getcontext"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-core = "^1.26.4"
msrest = "^0.7.1"
azure-mgmt-core = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

