[tool.poetry]
name = "context-python"
version = "0.9.0"
description = "Python SDK for the Context API"
authors = ["Alex Gamble <alex@context.ai>", "Alec Barber <alec@context.ai>", "Amisha Singh <amisha@context.ai>"]
readme = "README.md"
license = "LICENSE.md"
keywords = ["context", "api", "sdk"]
packages = [{include = "getcontext"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-core = "<2.0.0"
msrest = "<1.0.0"
azure-mgmt-core = "<2.0.0"
aiohttp = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
